@startuml UserModeration Subsystem (Full Integration)

skinparam monochrome false
skinparam shadowing false
skinparam packageStyle rectangle

package "UserModeration.States (STATE PATTERN)" {
    interface IUserState {
        + CanUpload(): bool
        + GetStatusMessage(): string
    }
    class ActiveState
    class TimedOutState {
        + CanUpload(): bool (checks DateTime.UtcNow)
    }
    class BannedState

    IUserState <|.. ActiveState
    IUserState <|.. TimedOutState
    IUserState <|.. BannedState
}

package "UserModeration.Violations (VISITOR PATTERN)" {
    interface IViolation {
        + Description: string
        + Accept(visitor: IViolationVisitor)
    }
    class FakeLosslessViolation
    class ForbiddenFormatViolation
    IViolation <|.. FakeLosslessViolation
    IViolation <|.. ForbiddenFormatViolation
}

package "UserModeration.Visitors (VISITOR PATTERN)" {
    interface IViolationVisitor {
        + Visit(v: FakeLosslessViolation)
        + Visit(v: ForbiddenFormatViolation)
    }
    class PenaltyCalculatorVisitor {
        + PenaltyScore: int
    }
    IViolationVisitor <|.. PenaltyCalculatorVisitor
}

package "UserModeration.Chain (CHAIN OF RESPONSIBILITY)" {
    abstract class PenaltyHandler {
        # Successor: PenaltyHandler
        + SetSuccessor(s: PenaltyHandler)
        + {abstract} HandlePenalty(u: User, score: int)
    }
    class StrikeHandler
    class TimeoutHandler {
        + HandlePenalty(): Sets User.TimeoutUntil
    }
    class BanHandler

    PenaltyHandler <|-- StrikeHandler
    PenaltyHandler <|-- TimeoutHandler
    PenaltyHandler <|-- BanHandler
}

package "UserModeration.Mediator (MEDIATOR PATTERN)" {
    interface IModerationMediator {
        + ProcessViolation(u: User, v: IViolation)
    }
    class ModerationMediator {
        - _observers: List<IModerationObserver>
        - _penaltyChain: PenaltyHandler
        + AddObserver(o: IModerationObserver)
    }
    IModerationMediator <|.. ModerationMediator
}

package "UserModeration.Observers (OBSERVER PATTERN)" {
    interface IModerationObserver {
        + OnViolationProcessed(u: User, v: IViolation)
    }
    class LoggingModerationObserver
    IModerationObserver <|.. LoggingModerationObserver
}

' Relationships
ModerationMediator --> PenaltyHandler : triggers chain
ModerationMediator --> IModerationObserver : notifies
ModerationMediator ..> IViolationVisitor : uses
IViolation ..> IViolationVisitor : accepts

@enduml
